--- a/portfolio.css
+++ b/portfolio.css
@@ -1,43 +1,136 @@
+/* Gothic A1 */
+@import url('https://fonts.googleapis.com/css?family=Gothic+A1&display=swap');
+/* Nanum Gothic Coding */
+@import url('https://fonts.googleapis.com/css?family=Nanum+Gothic+Coding:400,700&display=swap&subset=korean');
+
+/* en */
+@import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
+
 
 a{
   text-decoration: none;
-  color: black;
+  color: #727272;
 }
 a:visited{
-  color: black;
+  color: #727272;
 }
-h1{
-  text-align: center;
+
+body{
+  font-family: 'Nanum Gothic Coding', monospace;
+  letter-spacing: -1px;
+  line-height: 24px;
 }
 
 .inner{
   position: relative;
-
   display: grid;
 }
 
 header > h1{
-  font-size: 30px;
-  padding: 15px 0 10px;
+  /* font-family: 'Gothic A1', sans-serif; */
+  font-family: 'Montserrat', sans-serif;
+  font-weight: bold;
+  font-size: 40px;
+  letter-spacing: 0;
+  padding: 20px 0 10px;
+  text-align: center;
+}
+
+header > h2{
+  font-family: 'Montserrat', sans-serif;
+  font-weight: bold;
+  font-size: 28px;
+  letter-spacing: 0;
+  padding: 135px 0 14px;
+  text-align: center;
 }
 
 header > p{
   text-align: center;
-  padding-bottom: 25px;
+  padding-bottom: 60px;
+  font-size: 14px;
+  line-height: 19px;
+  letter-spacing: -1px;
+  color: #B1B0B0;
+}
+
+header .line_portfolio{
+  width: 70px;
+  /* border-top: 2.5px solid rgba(0,0,0,0.15); */
+  border-top: 2.5px solid rgba(114,114,114,0.5);
+  margin: 0 auto;
+  padding: 8px 0 10px;
 }
 
 .main{
   display: grid;
   justify-content: center;
   grid-template-columns: repeat(2, 600px);
-  grid-template-rows: 350px;
+  grid-template-rows: 550px;
   gap: 70px 0;
 
-  border: 1px solid black;
+  /* border: 1px solid black; */
 }
 
-.item{
-  border: 1px solid black;
+.main h3{
+  font-size: 25px;
+  font-weight: bold;
+  padding-bottom: 12px;
+}
+
+
+.info_left{
+  padding: 55px 0 0 80px;
+  position: relative;
+}
+
+.info_right{
+  padding: 55px 80px 0 0;
+  text-align: right;
+  position: relative;
+}
+
+.item .line_item01{
+  width: 284px;
+  border-top: 1.2px solid rgba(0,0,0,0.15);
+  position: absolute;
+  left: 0px;
+}
+
+.item .line_item02{
+  width: 210px;
+  border-top: 1.2px solid rgba(0,0,0,0.15);
+  position: absolute;
+  right: 0px;
+}
+
+.item .line_item03{
+  width: 270px;
+  border-top: 1.2px solid rgba(0,0,0,0.15);
+  position: absolute;
+  left: 0px;
+}
+
+.item .line_item04{
+  width: 270px;
+  border-top: 1.2px solid rgba(0,0,0,0.15);
+  position: absolute;
+  right: 0px;
+}
+
+.item ul{
+  padding-top: 40px;
+}
+
+.item p{
+  padding-top: 20px;
+}
+
+.bold{
+  font-weight: bold;
+}
+.none_letter{
+  letter-spacing: 0;
 }
 
 nav{
@@ -45,12 +138,54 @@ nav{
   top: 0;
   right: 100px;
   width: 200px;
-  height: 400px;
+  color: #727272;
+  /* height: 400px; */
+  /* border: 1px solid black; */
+}
 
+nav > div{
+  width: 200px;
+  height: 66px;
+  margin-top: 25px;
   border: 1px solid black;
+}
+
+nav .menu05_main{
+  padding: 24px 85px;
+  text-align: center;
+  line-height: 66px;
+}
+
+footer{
+  padding: 250px 0 100px;
+  display: grid;
+  justify-content: center;
+}
+
+footer > div{
+  width: 300px;
+  border-top: 1.2px solid rgba(0,0,0,0.15);
+  margin: 0 auto;
+}
+
+footer > ul{
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: repeat(4, 100px);
+}
+
+footer > ul li{
+  text-align: center;
+}
+
+footer > p{
+  text-align: center;
+  padding-top: 30px;
+  color: #B1B0B0;
 }
 
 .fixed{
   position: fixed;
   top: 0;
 }
+
