--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -42,8 +42,8 @@ table {
 	border-spacing: 0;
 }
 
-/************************************************************************/
 
+/************************************************************************/
 
 body{
 	color: #727272;
@@ -51,8 +51,8 @@ body{
 
 a{
   text-decoration: none;
-  color: #727272;
+  /* color: #727272; */
 }
-a:visited{
+/* a:visited{
   color: #727272;
-}
+} */
