--- a/src/css/index.css
+++ b/src/css/index.css
@@ -6,99 +6,142 @@
 /* en */
 @import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
 
-header{
-  padding: 60px 0 25px;
+body{
+  font-family: 'Nanum Gothic Coding', monospace;
+  letter-spacing: -1px;
+  line-height: 24px;
 }
 
-header > h1{
-  font-family: 'Montserrat', sans-serif;
-  font-weight: bold;
-  font-size: 36px;
-  letter-spacing: 0;
-  padding: 20px 0 10px;
-  text-align: center;
+a{
+  color: rgba(114,114,114,0.8);
 }
 
-.inner{
-  /* position: absolute; */
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  /* height: 70%; */
-  margin: auto;
+a:visited{
+  color: rgba(114,114,114,0.8);
 }
 
-.main{
+.wrapper{
+  width: 350px;
+  height: 560px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -51%);
+}
+
+section{
   display: grid;
   justify-content: center;
 }
 
-.main > p{
-  text-align: center;
-  padding: 14px 0 20px;
-  font-size: 14px;
-  line-height: 19px;
-}
-
-.logo{
-  width: 250px;
-  height: 250px;
-  background-image: url('../images/profile03.jpg');
+section .logo{
+  width: 220px;
+  height: 220px;
+  background-image: url(../images/profile03.jpg);
   background-repeat: no-repeat;
   background-size: cover;
-  background-position: 0 -70px;
+  background-position: 0 -66px;
   border-radius: 175px;
   margin: 0 auto;
 }
 
-.link{
-  display: grid;
-  grid-template-rows: repeat(1, 40px);
-  grid-template-columns: repeat(3, 40px);
-  gap: 0 11px;
-  grid-auto-flow: column;
-  justify-content: center;
-  padding-bottom: 42px;
+section .line_portfolio{
+  width: 70px;
+  border-top: 2.5px solid rgba(114,114,114,0.5);
+  margin: 30px auto 0;
 }
 
-.link .link_grid{
-  grid-row: 1/ 1;
-  border-radius: 50px;
-  padding: 12px 9px;
+section p{
+  font-size: 14px;
   text-align: center;
-  border: 1px solid rgba(114,114,114,0.5);
-}
-.none{
-  display: none;
-}
-
-.link_git{
-  background-image: url('../images/github.png');
-  background-repeat: no-repeat;
-  background-size: contain;
+  line-height: 20px;
+  letter-spacing: -1px;
+  padding: 14px 0 29px 0;
 }
 
-.link_blog{
-  background-image: url('../images/blog03.png');
-  background-repeat: no-repeat;
-  background-size: contain;
+section header{
+  padding-top: 42px;
 }
 
-.link_email{
-  background-image: url('../images/email.png');
-  background-repeat: no-repeat;
-  background-size: contain;
+section header > p{
+  font-size: 17px;
+  font-weight: bold;
+  padding: 52px 0 0 0;
+  font-style: italic;
 }
 
-button{
-  width: 120px;
-  height: 45px;
-  border-radius: 13px;
+section header > h1{
+  font-family: 'Montserrat', sans-serif;
+  font-weight: bold;
+  font-size: 43px;
+  letter-spacing: 0;
+  text-align: center;
+}
+
+section button{
+  width: 150px;
+  height: 41px;
   display: inline-block;
   margin: 0 auto;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: bold;
+  font-size: 16px;  
+  border: 1px solid rgba(114,114,114,0.4);
+  border-radius: 50px;
+  background-color: white;
+  cursor: pointer;
 }
 
-button > a{
-  padding: 13px;
+section button:hover{
+  border: none;
+  background-color: rgba(242, 205, 135, 0.4);
 }
+
+section button > a{
+  padding: 13px 20px;
+}
+
+section button:hover a{
+  color: rgba(114,114,114,0.66);
+}
+
+section ul{
+  display: grid;
+  gap: 0 12px;
+  grid-auto-flow: column;
+  justify-content: center;
+  padding: 15px 0 18px 0;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 13.5px;
+  font-weight: bold;
+}
+
+section ul li{
+  display: inline-block;
+  text-align: center;
+}
+
+section ul li:hover{
+  cursor: pointer;
+}
+
+section ul li a{
+  grid-row: 1/ 1;
+}
+
+section ul li::before{
+  content: '';
+  border-left: 1px solid rgba(114,114,114,0.5);
+  padding: 0 5px;
+}
+
+section ul li:first-child::before{
+  content: '';
+  border: none;
+}
+
+
+
+
+
+
