--- a/src/css/portfolio.css
+++ b/src/css/portfolio.css
@@ -7,7 +7,7 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
 
 
-body{
+body, div, p{
   font-family: 'Nanum Gothic Coding', monospace;
   line-height: 24px;
   letter-spacing: -1px;
@@ -24,7 +24,8 @@ a:visited{
 
 section{
   position: relative;
-  display: grid;
+  width: 1200px;
+  margin: 0 auto;
 }
 
 header{
@@ -41,34 +42,68 @@ header > h2{
 }
 
 header > p{
-  font-size: 14px;
+  font-size: 15px;
   text-align: center;
   line-height: 20px;
+  color: rgba(114,114,114,0.8);
 }
-
 
 header .line_portfolio{
   width: 70px;
-  /* border-top: 2.5px solid rgba(0,0,0,0.15); */
   border-top: 2.5px solid rgba(114,114,114,0.5);
   margin: 0 auto;
   padding: 8px 0 10px;
 }
 
-.box-conts{
+.contents{
   display: grid;
   justify-content: center;
   grid-template-columns: repeat(2, 600px);
   grid-template-rows: 550px;
   gap: 70px 0;
-
   /* border: 1px solid black; */
 }
 
-.box-conts h3{
+.contents h3{
   font-size: 25px;
   font-weight: bold;
   padding-bottom: 12px;
+}
+
+.scroll{
+  cursor: pointer;
+}
+
+.area-popup{
+  display: none;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0,0,0,0.45);
+}
+
+/* .popup{
+  width: 800px;
+  height: 500px;
+  background-color: white;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  margin: -250px 0 0 -400px;
+  border: 1px solid black;
+} */
+
+.popup-item01, .popup-item02, .popup-item03, .popup-item04{
+  display: none;
+  width: 800px;
+  height: 500px;
+  background-color: white;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  margin: -250px 0 0 -400px;
+  border: 1px solid black;
 }
 
 .info_left{
@@ -80,6 +115,10 @@ header .line_portfolio{
 .info_right{
   padding: 55px 0 0 80px;
   position: relative;
+}
+
+.link{
+  opacity: 0.6;
 }
 
 .item .line_item01{
@@ -118,35 +157,57 @@ header .line_portfolio{
   padding-top: 20px;
 }
 
-.bold{
+.font-bold{
   font-weight: bold;
   padding-top: 17px;
+  font-family: 'Montserrat', sans-serif;
 }
-.none_letter{
+
+.font-noletter{
   letter-spacing: 0;
+  font-family: 'Montserrat', sans-serif;
 }
 
 nav{
   position: absolute;
   top: 2rem;
-  right: 100px;
-  width: 200px;
+  right: -4rem;
   color: #727272;
-  /* height: 400px; */
-  /* border: 1px solid black; */
+  line-height: 25px;
 }
 
-nav .btn-main{
+nav .area-navi{
+  position: absolute;
   width: 200px;
-  height: 66px;
-  margin-top: 25px;
-  border: 1px solid black;
 }
 
-nav .menu05_main{
-  padding: 24px 85px;
+nav .area-navi ul li:hover{
+  font-weight: bold;
+}
+
+nav .btn-goTomain{
+  width: 150px;
+  height: 41px;
+  margin-top: 25px;
+  border: 1px solid rgba(114,114,114,0.4);
+  border-radius: 50px;
+}
+nav .btn-goTomain a{
+  padding: 14px 60px;
   text-align: center;
-  line-height: 66px;
+  line-height: 41px;
+}
+
+nav .btn-goTomain:hover{
+  border: none;
+  background-color: rgba(242, 205, 135, 0.4);
+  font-weight: bold;
+}
+
+nav .fixed{
+  position: fixed;
+  top: 2rem;
+  /* right: 10rem; */
 }
 
 footer{
@@ -177,22 +238,22 @@ footer > p{
   color: #B1B0B0;
 }
 
-.fixed{
-  position: fixed;
-  top: 2rem;
-}
-
-@media (max-width: 1599px){
-  nav, .item p, .item ul li{
+@media (max-width: 1679px){
+  nav, .item p, .item ul li, header > p{
     font-size: 0.875em;
-    line-height: 20px
+    line-height: 20px;
   }
-  .box-conts{
+
+  nav{
+    right: 3rem;
+  }
+
+  .contents{
     grid-template-columns: repeat(2, 500px);
     grid-template-rows: 450px;
   }
 
-  .box-conts h3{
+  .contents h3{
     font-size: 1.438em;
     padding-bottom: 10px;
   }
@@ -201,9 +262,21 @@ footer > p{
     padding-top: 35px;
   }
 
-  .item img{
+  .item .img{
     width: 500px;
     height: 450px;
+  }
+
+  .link{
+    width: 18px;
+    height: 18px;
+  }
+
+  .item .line_item01{
+    width: 268px;
+    border-top: 1.2px solid rgba(0,0,0,0.15);
+    position: absolute;
+    left: 0px;
   }
   
 }
