--- a/src/css/index.css
+++ b/src/css/index.css
@@ -4,7 +4,7 @@
 @import url('https://fonts.googleapis.com/css?family=Nanum+Gothic+Coding:400,700&display=swap&subset=korean');
 
 /* en */
-@import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Montserrat:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&display=swap');
 
 body{
   font-family: 'Nanum Gothic Coding', monospace;
@@ -26,7 +26,7 @@ a:visited{
   min-width: 350px;
   min-height: 560px;
   position: absolute;
-  top: 50%;
+  top: 63%;
   left: 50%;
   transform: translate(-50%, -51%);
 }
@@ -37,32 +37,26 @@ section{
 }
 
 section .logo{
-  width: 220px;
-  height: 220px;
+  width: 230px;
+  height: 230px;
   background-image: url(../images/profile03.jpg);
   background-repeat: no-repeat;
   background-size: cover;
-  background-position: 0 -66px;
+  background-position: 0 -60px;
   border-radius: 175px;
   margin: 0 auto;
 }
 
-section .line_portfolio{
-  width: 70px;
-  border-top: 2.5px solid rgba(114,114,114,0.5);
-  margin: 30px auto 0;
-}
-
 section p{
-  font-size: 14px;
+  font-size: 15px;
   text-align: center;
   line-height: 20px;
-  letter-spacing: -1px;
-  padding: 14px 0 29px 0;
+  /* letter-spacing: 0.02px; */
+  padding: 18px 0 26px 0;
 }
 
 section header{
-  padding-top: 42px;
+  padding-top: 29px;
 }
 
 section header > p{
@@ -74,20 +68,21 @@ section header > p{
 
 section header > h1{
   font-family: 'Montserrat', sans-serif;
-  font-weight: bold;
-  font-size: 43px;
-  letter-spacing: 0;
+  font-weight: 500;
+  font-size: 37px;
+  letter-spacing: -1px;
   text-align: center;
+  color: #81665C;
 }
 
 section button{
-  width: 150px;
+  width: 140px;
   height: 41px;
   display: inline-block;
   margin: 0 auto;
   font-family: 'Montserrat', sans-serif;
-  font-weight: bold;
-  font-size: 16px;  
+  font-weight: 500;
+  font-size: 15px;  
   border: 1px solid rgba(114,114,114,0.4);
   border-radius: 50px;
   background-color: white;
@@ -96,15 +91,18 @@ section button{
 
 section button:hover{
   border: none;
-  background-color: rgba(242, 205, 135, 0.4);
+  /* background-color: rgba(242,1 205, 135, 0.4); */
+  background-color: #81665C;
 }
 
 section button > a{
-  padding: 13px 20px;
+  padding: 13px 19px;
 }
 
 section button:hover a{
-  color: rgba(114,114,114,0.7);
+  /* color: rgba(114,114,114,0.7); */
+  color: white;
+  font-weight: 600;
 }
 
 section ul{
@@ -112,19 +110,21 @@ section ul{
   gap: 0 12px;
   grid-auto-flow: column;
   justify-content: center;
-  padding: 15px 0 18px 0;
-  font-family: 'Montserrat', sans-serif;
-  font-size: 13px;
-  font-weight: bold;
+  padding: 11px 0 18px 0;
 }
 
 section ul li{
   display: inline-block;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 12px;
+  font-weight: 400;
+  letter-spacing: -1px;
   text-align: center;
 }
 
 section ul li:hover{
   cursor: pointer;
+  /* font-weight: 500; */
 }
 
 section ul li a{
@@ -140,6 +140,7 @@ section ul li::before{
 section ul li:first-child::before{
   content: '';
   border: none;
+  margin-left: -10px;
 }
 
 
