--- a/src/css/portfolio.css
+++ b/src/css/portfolio.css
@@ -4,7 +4,7 @@
 @import url('https://fonts.googleapis.com/css?family=Nanum+Gothic+Coding:400,700&display=swap&subset=korean');
 
 /* en */
-@import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Montserrat:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&display=swap');
 
 
 body, div, p{
@@ -22,6 +22,10 @@ a:visited{
   color: rgba(114,114,114,0.8);
 }
 
+a:hover{
+  /* color: white; */
+}
+
 section{
   position: relative;
   width: 1200px;
@@ -34,7 +38,7 @@ header{
 
 header > h2{
   font-family: 'Montserrat', sans-serif;
-  font-weight: bold;
+  font-weight: 500;
   font-size: 28px;
   letter-spacing: 0;
   padding-bottom:   14px;
@@ -52,7 +56,7 @@ header .line_portfolio{
   width: 70px;
   border-top: 2.5px solid rgba(114,114,114,0.5);
   margin: 0 auto;
-  padding: 8px 0 10px;
+  padding: 0 0 18px 0;
 }
 
 .contents{
@@ -65,8 +69,12 @@ header .line_portfolio{
 
 .contents h3{
   font-size: 25px;
-  font-weight: bold;
+  font-weight: 600;
   padding-bottom: 12px;
+}
+
+.contents h3 span{
+  font-weight: 500;
 }
 
 .scroll{
@@ -159,14 +167,12 @@ header .line_portfolio{
 }
 
 .font-bold{
-  font-weight: bold;
+  font-weight: 600;
   padding-top: 17px;
-  font-family: 'Montserrat', sans-serif;
 }
 
 .font-noletter{
   letter-spacing: 0;
-  font-family: 'Montserrat', sans-serif;
 }
 
 nav{
@@ -184,10 +190,10 @@ nav .area-navi{
 }
 
 nav .area-navi ul li:hover{
-  font-weight: bold;
+  font-weight: 600;
 }
 
-nav .btn-goTomain{
+/* nav .btn-goTomain{
   width: 150px;
   height: 41px;
   margin-top: 25px;
@@ -202,8 +208,41 @@ nav .btn-goTomain a{
 
 nav .btn-goTomain:hover{
   border: none;
-  background-color: rgba(242, 205, 135, 0.4);
+  /* background-color: rgba(242, 205, 135, 0.4); 
+  background-color: #81665C;
   font-weight: bold;
+} */
+
+
+nav button{
+  width: 150px;
+  height: 41px;
+  display: inline-block;
+  margin: 0 auto;
+  margin-top: 25px;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 500;
+  font-size: 15px;  
+  border: 1px solid rgba(114,114,114,0.4);
+  border-radius: 50px;
+  background-color: white;
+  cursor: pointer;
+}
+
+nav button:hover{
+  border: none;
+  /* background-color: rgba(242,1 205, 135, 0.4); */
+  background-color: #81665C;
+}
+
+nav button > a{
+  padding: 13px 19px;
+}
+
+nav button:hover a{
+  /* color: rgba(114,114,114,0.7); */
+  color: white;
+  font-weight: 600;
 }
 
 nav .fixed{
@@ -242,6 +281,7 @@ footer > p{
 /* 영문 폰트 전용 class */
 .font-en{
   font-family: 'Montserrat', sans-serif;
+  /* font-weight: 500; */
 }
 
 @media (max-width: 1599px){
