--- a/src/css/portfolio.css
+++ b/src/css/portfolio.css
@@ -1,5 +1,4 @@
-/* Gothic A1 */
-@import url('https://fonts.googleapis.com/css?family=Gothic+A1&display=swap');
+
 /* Nanum Gothic Coding */
 @import url('https://fonts.googleapis.com/css?family=Nanum+Gothic+Coding:400,700&display=swap&subset=korean');
 
@@ -22,15 +21,11 @@ a:visited{
   color: rgba(114,114,114,0.8);
 }
 
-a:hover{
-  /* color: white; */
-}
+/*****************************************************************************/
 
-section{
-  position: relative;
-  width: 1200px;
-  margin: 0 auto;
-}
+
+
+/* 헤더(header) */
 
 header{
   padding: 150px 0 100px 0;
@@ -59,6 +54,16 @@ header .line_portfolio{
   padding: 0 0 18px 0;
 }
 
+
+
+/* 섹션(section) */
+
+section{
+  position: relative;
+  width: 1200px;
+  margin: 0 auto;
+}
+
 .contents{
   display: grid;
   justify-content: center;
@@ -77,44 +82,6 @@ header .line_portfolio{
   font-weight: 500;
 }
 
-.scroll{
-  cursor: pointer;
-}
-
-.area-popup{
-  display: none;
-  position: fixed;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0,0,0,0.5);
-}
-
-.popup-item01, .popup-item02, .popup-item03, .popup-item04{
-  display: none;
-  position: fixed;
-  width: 600px;
-  height: 400px;
-  min-width: 600px;
-  min-height: 400px;
-  top: 50%;
-  left: 50%;
-  margin: -200px 0 0 -300px;
-  background-color: white;
-  border: 1px solid black;
-}
-
-.closeBtn{
-  position: fixed;
-  top: 5rem;
-  right: 5rem;
-  width: 60px;
-  height: 60px;
-  background: url('../images/close_white.png');
-  background-size: cover;
-  cursor: pointer; 
-}
-
 .info_left{
   padding: 55px 80px 0 0;
   text-align: right;
@@ -126,10 +93,28 @@ header .line_portfolio{
   position: relative;
 }
 
-.link{
+.item .img-link{
   opacity: 0.6;
 }
 
+.item > img{
+  cursor: pointer;
+}
+
+.item ul{
+  padding-top: 40px;
+}
+
+.item ul li:nth-child(odd){
+  padding-top: 17px;
+}
+
+.item p{
+  padding: 20px 0 0 0;
+}
+
+
+/* 프로젝트 제목 밑 line */
 .item .line_item01{
   width: 264px;
   border-top: 1.2px solid rgba(0,0,0,0.15);
@@ -158,23 +143,8 @@ header .line_portfolio{
   right: 0px;
 }
 
-.item ul{
-  padding-top: 40px;
-}
 
-.item p{
-  padding-top: 20px;
-}
-
-.font-bold{
-  font-weight: 600;
-  padding-top: 17px;
-}
-
-.font-noletter{
-  letter-spacing: 0;
-}
-
+/* 네비게이션 */
 nav{
   position: absolute;
   top: 2rem;
@@ -185,34 +155,12 @@ nav{
 
 nav .area-navi{
   position: absolute;
-  /* width: 200px; */
   width: 12.5rem;
 }
 
 nav .area-navi ul li:hover{
   font-weight: 600;
 }
-
-/* nav .btn-goTomain{
-  width: 150px;
-  height: 41px;
-  margin-top: 25px;
-  border: 1px solid rgba(114,114,114,0.4);
-  border-radius: 50px;
-}
-nav .btn-goTomain a{
-  padding: 14px 60px;
-  text-align: center;
-  line-height: 41px;
-}
-
-nav .btn-goTomain:hover{
-  border: none;
-  /* background-color: rgba(242, 205, 135, 0.4); 
-  background-color: #81665C;
-  font-weight: bold;
-} */
-
 
 nav button{
   width: 150px;
@@ -231,16 +179,14 @@ nav button{
 
 nav button:hover{
   border: none;
-  /* background-color: rgba(242,1 205, 135, 0.4); */
   background-color: #81665C;
 }
 
 nav button > a{
-  padding: 13px 19px;
+  padding: 13px 53px;
 }
 
 nav button:hover a{
-  /* color: rgba(114,114,114,0.7); */
   color: white;
   font-weight: 600;
 }
@@ -249,6 +195,9 @@ nav .fixed{
   position: fixed;
   top: 2rem;
 }
+
+
+/* 푸터(footer) */
 
 footer{
   padding: 250px 0 100px;
@@ -278,11 +227,58 @@ footer > p{
   color: #B1B0B0;
 }
 
-/* 영문 폰트 전용 class */
+
+/* 레이어 팝업 */
+.area-popup{
+  display: none;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0,0,0,0.5);
+}
+
+.popup-item01, .popup-item02, .popup-item03, .popup-item04{
+  display: none;
+  position: fixed;
+  width: 600px;
+  height: 400px;
+  min-width: 600px;
+  min-height: 400px;
+  top: 50%;
+  left: 50%;
+  margin: -200px 0 0 -300px;
+  background-color: white;
+  border: 6px solid rgba(0,0,0,0.5);
+}
+
+.closeBtn{
+  position: fixed;
+  top: 5rem;
+  right: 5rem;
+  width: 60px;
+  height: 60px;
+  background: url('../images/close_white.png');
+  background-size: cover;
+  cursor: pointer; 
+}
+
+
+/* 영문 폰트 전용 */
 .font-en{
   font-family: 'Montserrat', sans-serif;
-  /* font-weight: 500; */
 }
+/* 영문 폰트 bold 전용 */
+.font-bold{
+  font-weight: 600;
+}
+/* 초기 세팅 값 리셋 */
+.font-noletter{
+  letter-spacing: 0;
+}
+
+
+/**************************** 미디어 쿼리 ****************************/
 
 @media (max-width: 1599px){
   nav, .item p, .item ul li, header > p{
@@ -313,24 +309,24 @@ footer > p{
     height: 450px;
   }
 
-  .link{
+  .item .img-link{
     width: 18px;
     height: 18px;
   }
 
-  .contents .item .line_item01{
+  .item .line_item01{
     width: 248px;
   }
   
-  .contents .item .line_item02{
+  .item .line_item02{
     width: 227px;
   }
   
-  .contents .item .line_item03{
+  .item .line_item03{
     width: 250px;
   }
   
-  .contents .item .line_item04{
+  .item .line_item04{
     width: 226px;
   }
 
@@ -358,6 +354,7 @@ footer > p{
     height: 40px;
   }
 }
+
 
 @media (max-width: 1279px){
   section{
