--- a/src/css/slider.css
+++ b/src/css/slider.css
@@ -1,3 +1,13 @@
+/* 
+
+
+	slider.css 
+	가져온 라이브러리 
+
+
+*/
+
+
 /*GLOBALS*/
 *{margin:0; padding:0; list-style:none;}
 a{text-decoration:none;	color:#666;}
