--- a/src/css/index.css
+++ b/src/css/index.css
@@ -28,7 +28,7 @@ a:visited{
   min-width: 350px;
   min-height: 560px;
   position: absolute;
-  top: 63%;
+  top: 59%;
   left: 50%;
   transform: translate(-50%, -51%);
 }
@@ -39,7 +39,7 @@ a:visited{
 header .logo{
   width: 230px;
   height: 230px;
-  background-image: url(../images/profile03.jpg);
+  background-image: url(../images/profile03_edit.png);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: 0 -60px;
