--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,22 +1,26 @@
 
-/* Nanum Gothic Coding */
-@import url('https://fonts.googleapis.com/css?family=Nanum+Gothic+Coding:400,700&display=swap&subset=korean');
-
 /* en */
 @import url('https://fonts.googleapis.com/css?family=Montserrat:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&display=swap');
 
+/* 나눔고딕 코딩 */
+@import url('https://fonts.googleapis.com/css?family=Nanum+Gothic+Coding:400,700&display=swap&subset=korean');
+
+/* 나눔고딕 */
+@import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700;800&display=swap');
+
 body{
-  font-family: 'Nanum Gothic Coding', monospace;
-  letter-spacing: -1px;
+  font-family: 'Nanum Gothic', monospace;
+  letter-spacing: 0.12px;
   line-height: 24px;
+  color: #666666; 
 }
 
 a{
-  color: rgba(114,114,114,0.8);
+  color: #666666;
 }
 
 a:visited{
-  color: rgba(114,114,114,0.8);
+  color: #666666;
 }
 
 /*****************************************************************************/
@@ -68,8 +72,8 @@ section{
 section p{
   font-size: 15px;
   text-align: center;
-  line-height: 20px;
-  padding: 18px 0 26px 0;
+  line-height: 22px;
+  padding: 19px 0 29px 0;
 }
 
 section button{
