--- a/src/css/portfolio.css
+++ b/src/css/portfolio.css
@@ -1,24 +1,26 @@
 
-/* Nanum Gothic Coding */
-@import url('https://fonts.googleapis.com/css?family=Nanum+Gothic+Coding:400,700&display=swap&subset=korean');
-
 /* en */
 @import url('https://fonts.googleapis.com/css?family=Montserrat:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&display=swap');
 
+/* 나눔고딕 코딩 */
+@import url('https://fonts.googleapis.com/css?family=Nanum+Gothic+Coding:400,700&display=swap&subset=korean');
+
+/* 나눔고딕 */
+@import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700;800&display=swap');
 
 body, div, p{
-  font-family: 'Nanum Gothic Coding', monospace;
+  font-family: 'Nanum Gothic', monospace;
   line-height: 24px;
-  letter-spacing: -1px;
-  color: #727272;
+  letter-spacing: 0.12px;
+  color: #666666;
 }
 
 a{
-  color: rgba(114,114,114,0.8);
+    color: #666666;
 }
-
+  
 a:visited{
-  color: rgba(114,114,114,0.8);
+    color: #666666;
 }
 
 /*****************************************************************************/
@@ -36,15 +38,16 @@ header > h2{
   font-weight: 500;
   font-size: 28px;
   letter-spacing: 0;
-  padding-bottom:   14px;
+  padding-bottom: 14px;
   text-align: center;
+  color: #525252;
 }
 
 header > p{
   font-size: 15px;
   text-align: center;
-  line-height: 20px;
-  color: rgba(114,114,114,0.8);
+  line-height: 22px;
+  color: #6E6E6E;
 }
 
 header .line_portfolio{
@@ -60,22 +63,42 @@ header .line_portfolio{
 
 section{
   position: relative;
-  width: 1200px;
+  width: 1000px;
   margin: 0 auto;
 }
 
-.contents{
-  display: grid;
-  justify-content: center;
-  grid-template-columns: repeat(2, 600px);
-  grid-template-rows: 550px;
-  gap: 70px 0;
+.contents > li {
+    height: 700px;
+}
+
+.contents li div{
+    display: inline-block;
+    float: left;
+}
+
+.contents .con-img{
+    width : 500px;
+    box-shadow: 4px 2px 7px rgba(0,0,0,0.14);
+}
+
+.contents .con-img > div > img{
+    width: 100%;
+}
+
+.contents .con-text{
+    width : 500px
+}
+
+.contents .con-text ul li h4 {
+    padding-top: 17px;
+    color: #525252;
 }
 
 .contents h3{
   font-size: 25px;
   font-weight: 600;
   padding-bottom: 12px;
+  color: #525252;
 }
 
 .contents h3 span{
@@ -83,18 +106,18 @@ section{
 }
 
 .info_left{
-  padding: 55px 80px 0 0;
+  padding: 5px 0 0 65px;
   text-align: right;
   position: relative;
 }
 
 .info_right{
-  padding: 55px 0 0 80px;
+  padding: 5px 0 0 65px;
   position: relative;
 }
 
 .item .img-link{
-  opacity: 0.6;
+  opacity: 0.66;
 }
 
 .item > img{
@@ -102,45 +125,11 @@ section{
 }
 
 .item ul{
-  padding-top: 40px;
+  padding-top: 20px;
 }
 
 .item ul li:nth-child(odd){
-  padding-top: 17px;
-}
-
-.item p{
-  padding: 20px 0 0 0;
-}
-
-
-/* 프로젝트 제목 밑 line */
-.item .line_item01{
-  width: 264px;
-  border-top: 1.2px solid rgba(0,0,0,0.15);
-  position: absolute;
-  left: 0px;
-}
-
-.item .line_item02{
-  width: 241px;
-  border-top: 1.2px solid rgba(0,0,0,0.15);
-  position: absolute;
-  right: 0px;
-}
-
-.item .line_item03{
-  width: 265px;
-  border-top: 1.2px solid rgba(0,0,0,0.15);
-  position: absolute;
-  left: 0px;
-}
-
-.item .line_item04{
-  width: 241px;
-  border-top: 1.2px solid rgba(0,0,0,0.15);
-  position: absolute;
-  right: 0px;
+  /* padding-top: 17px; */
 }
 
 
@@ -149,13 +138,14 @@ nav{
   position: absolute;
   top: 2rem;
   right: -4rem;
-  color: #727272;
+  color: #6E6E6E;
   line-height: 25px;
 }
 
 nav .area-navi{
   position: absolute;
   width: 12.5rem;
+  letter-spacing: -0.5px;
 }
 
 nav .area-navi ul li:hover{
@@ -200,13 +190,13 @@ nav .fixed{
 /* 푸터(footer) */
 
 footer{
-  padding: 450px 0 100px;
+  padding: 150px 0 100px;
   display: grid;
   justify-content: center;
 }
 
 footer > div{
-  width: 300px;
+  width: 200px;
   border-top: 1.2px solid rgba(0,0,0,0.15);
   margin: 0 auto;
 }
@@ -225,44 +215,8 @@ footer > p{
   text-align: center;
   padding-top: 10px;
   color: #B1B0B0;
+  font-size: 14px;
 }
-
-
-/* 레이어 팝업 */
-/* .area-popup{
-  display: none;
-  position: fixed;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0,0,0,0.5);
-}
-
-.popup-item01, .popup-item02, .popup-item03, .popup-item04{
-  display: none;
-  position: fixed;
-  width: 600px;
-  height: 400px;
-  min-width: 600px;
-  min-height: 400px;
-  top: 50%;
-  left: 50%;
-  margin: -200px 0 0 -300px;
-  background-color: white;
-  border: 6px solid rgba(0,0,0,0.5);
-}
-
-.closeBtn{
-  position: fixed;
-  top: 5rem;
-  right: 5rem;
-  width: 60px;
-  height: 60px;
-  background: url('../images/close_white.png');
-  background-size: cover;
-  cursor: pointer; 
-} */
-
 
 /* 영문 폰트 전용 */
 .font-en{
@@ -280,102 +234,3 @@ footer > p{
 
 /**************************** 미디어 쿼리 ****************************/
 
-@media (max-width: 1599px){
-  nav, .item p, .item ul li, header > p{
-    font-size: 0.93em;
-    line-height: 20px;
-  }
-
-  nav{
-    right: 3rem;
-  }
-
-  .contents{
-    grid-template-columns: repeat(2, 500px);
-    grid-template-rows: 450px;
-  }
-
-  .contents h3{
-    font-size: 1.438em;
-    padding-bottom: 10px;
-  }
-
-  .contents .item ul{
-    padding-top: 35px;
-  }
-
-  .contents .item .img{
-    width: 500px;
-    height: 450px;
-  }
-
-  .item .img-link{
-    width: 18px;
-    height: 18px;
-  }
-
-  .item .line_item01{
-    width: 248px;
-  }
-  
-  .item .line_item02{
-    width: 227px;
-  }
-  
-  .item .line_item03{
-    width: 250px;
-  }
-  
-  .item .line_item04{
-    width: 226px;
-  }
-
-}
-
-
-@media (max-width: 1399px){
-  nav{
-    right: 9rem;
-  }
-
-  .contents{
-    grid-template-columns: repeat(2, 400px);
-    grid-template-rows: 350px;
-  }
-  .contents .item .img{
-    width: 400px;
-    height: 350px;
-  }
-
-  .area-popup .closeBtn{
-    top: 4rem;
-    right: 4rem;
-    width: 40px;
-    height: 40px;
-  }
-}
-
-
-@media (max-width: 1279px){
-  section{
-    width: 100%;
-    padding: 2rem ;
-  }
-  nav{
-    display: none;
-  }
-}
-
-
-@media (max-width: 940px){
-  header, section, footer{
-    min-width: 920px;
-  }
-
-  .area-popup .closeBtn{
-    top: 3rem;
-    right: 3rem;
-    width: 40px;
-    height: 40px;
-  }
-}
